fixed layout issues on landing page

--- a/static/css/site_style.css
+++ b/static/css/site_style.css
@@ -5,17 +5,16 @@ html, body {
     height: 100%;
 }
 .wrapper {
-    min-height: 100%;
-    height: auto !important;
-    height: 100%;
     margin: 0 auto -100px;
+    min-width: 940px;
 }
 .footer, .push {
     height: 98px;
+    margin: 0 auto;
 }
 .container-narrow {
     margin: 0 auto;
-    max-width: 870px;
+    width: 870px;
 }
 .login-box {
     margin: 0 auto;
@@ -96,9 +95,17 @@ ul {
     box-shadow: 0 3px 2px -2px gray;
     min-height: 373px;
 }
+.main-text {
+    font-family: 'Raleway', sans-serif;
+    color: white;
+    font-weight: 400;
+    font-size: 4.7em !important;
+    margin-top: 30px;
+}
 .footer {
     border-top: 2px solid #909090;
     background-color: #29333d;
+    min-width: 940px;
 }
 .footer-special {
     border-top: 1px solid #dedede;
@@ -112,7 +119,7 @@ ul {
     background-color: white;
     border-radius: 20px;
     color: #5AB66F;
-    margin-top: 25px;
+    margin-top: 20px;
 }
 .signup-btn-large:hover {
     box-shadow: 0px 0px 20px white;
@@ -158,7 +165,7 @@ ul {
     height: 55px;
 }
 .top-links {
-    margin-right: 20px;
+    margin-right: 30px;
     margin-top: 22px;
 }
 .nav-link {
